[F] Fix dropdown spacing

--- a/GPACalc.UI/web/styles/app.css
+++ b/GPACalc.UI/web/styles/app.css
@@ -97,6 +97,11 @@
     margin: -5px -31px -5px 0px;
 }
 
+.ui.selection.dropdown
+{
+    min-height: 0;
+}
+
 .hy-close-icon
 {
     margin-top: 12px;
